<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/dash_stroke"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/dash_stroke"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tbOperand1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/operand1"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/operand1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/text_round_corners"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/lval"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/dash_stroke"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnPlus"
                style="@style/Theme.Calculator"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_corners"
                android:clickable="true"
                android:enabled="true"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMinus"
                style="@style/Theme.Calculator"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_corners"
                android:clickable="true"
                android:enabled="true"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMultiply"
                style="@style/Theme.Calculator"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_corners"
                android:clickable="true"
                android:enabled="true"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/Theme.Calculator"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_corners"
                android:clickable="true"
                android:enabled="true"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dash_stroke"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvOperand2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/operand2"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/operand2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/text_round_corners"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/rval"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvEqual"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_corners"
                android:clickable="true"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/equal"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/text_round_corners"
                android:gravity="center"
                android:hint="@string/result"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>